# bazel-coverage

./: .bazelrc  Pipfile  WORKSPACE  collect_coverage.sh
bash/: BUILD.bazel  lib.sh  lib_test.bats
cpp/: BUILD.bazel  lib.cc  lib_test.cc
go/: BUILD.bazel  lib.go  lib_test.go
java/: BUILD.bazel
java/src/main/foo/: Lib.java
java/src/test/foo/: LibTest.java
python/: BUILD.bazel  lib.py  lib_test.py
tools/coverage/python/: BUILD.bazel  coverage.py
